--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" data-react-helmet="true" />
     <title>Tech Store</title>
     <script src="https://kit.fontawesome.com/6a71215d51.js" crossorigin="anonymous"></script>
   </head>
